Fix styles on mobile

--- a/src/app/ultimate-tic-tac-toe/ultimate-tic-tac-toe.component.scss
+++ b/src/app/ultimate-tic-tac-toe/ultimate-tic-tac-toe.component.scss
@@ -10,6 +10,8 @@
 .layout-wrapper {
   display: flex;
   gap: 32px;
+  overflow-x: hidden;
+  overflow-y: hidden;
 
   @media (max-width: 768px) {
     flex-direction: column;   // stack vertically
@@ -23,10 +25,15 @@
   display: flex;
   justify-content: center;
   position: relative;
+
+  @media (max-width: 768px) {
+    width: 90vw;
+    height: 90vw;
+  }
 }
 
 .settings-panel {
-  position: relative; /* so button can be absolutely positioned */
+  position: relative;
   width: 220px;
   padding: 16px;
   background-color: #fff;
